crates/solidity/testing/snapshots/cst_output/SourceUnit/unrecognized_lexeme_after_contract/v2/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected UNRECOGNIZED. One of IsKeyword_Reserved, LayoutKeyword_Unreserved, OpenBrace was expected
   ╭─[crates/solidity/testing/snapshots/cst_output/SourceUnit/unrecognized_lexeme_after_contract/input.sol:1:12]
   │
 1 │ contract X # { }
   │            ┬  
   │            ╰── Error occurred here.
───╯
